[package]
name = "netring"
version = "0.27.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-performance zero-copy packet I/O for Linux (AF_PACKET TPACKET_V3 + AF_XDP)"
keywords = ["packet", "capture", "af_packet", "af_xdp", "zero-copy"]
categories = ["network-programming", "os::linux-apis"]
readme = "README.md"
documentation = "https://docs.rs/netring"
homepage = "https://github.com/p13marc/netring"
exclude = ["CLAUDE.md", "SPEC.md"]

[dependencies]
# Flow & session tracking lives in the flowscope crate.
#
# Non-optional: netring re-exports `flowscope::Timestamp` and
# `flowscope::PacketView` unconditionally as the canonical packet
# timestamp / view types. With `default-features = false`, flowscope
# pulls only `bitflags` + `thiserror` — both already in netring's tree.
# The `parse` feature additionally enables `flowscope/extractors`,
# `flow` enables `tracker`/`reassembler`/`session`.
flowscope = { version = "0.20", default-features = false }

libc = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }

tokio = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }
futures-core = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
ahash = { workspace = true, optional = true }
xxhash-rust = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
etherparse = { workspace = true, optional = true }
pcap-file = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

# Optional XDP program loader (plan 12). Pure Rust; pulls aya for
# `bpf(2)` / netlink wrappers and XSKMAP map plumbing.
aya = { version = "0.13", optional = true }

# Optional serde derives on `Anomaly<K>` + `AnomalyContext` +
# `Severity`. Pairs with `flowscope/serde` (shipped in 0.8).
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

# 0.20 plugin-layer dependencies (Phase B).
# - rustc-hash: TypeId-keyed maps in the handler registry + state map
# - arrayvec: small inline arrays in the dispatcher slot table
rustc-hash = "2"
arrayvec = "0.7"

# Optional dhat dependency, gated on the `bench-zero-alloc` feature.
# Drives the steady-state allocation regression test in
# `benches/zero_alloc.rs`. Off by default to keep the dependency
# tree slim for users not running the bench.
dhat = { version = "0.3", optional = true }

# Optional Sigma rule evaluator (issue #46), gated on the `sigma` feature.
# Pure-Rust, no-tokio; parses Sigma YAML + evaluates rules against typed
# key/value events. Pulls a YAML parser (serde_norway) + regex.
sigma-rust = { version = "0.7", optional = true }
yara-x = { version = "1.18", default-features = false, optional = true }
arc-swap = "1"

[dev-dependencies]
env_logger = "0.11"
tempfile = "3"
divan = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
etherparse = "0.16"
core_affinity = "0.8"
futures = "0.3"
proptest = "1"
# 0.25 W1f: structured JSON logging example (monitor/tracing_json).
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# ── Feature graph ───────────────────────────────────────────────────────────
# Features are organized as ORTHOGONAL AXES. See `docs/FEATURES.md` for the
# full matrix + recipes, and `docs/CRATE_BOUNDARY.md` for the netring↔flowscope
# split. Quick recipes:
#   bare capture/inject : default = []
#   AF_XDP              : af-xdp           (+ xdp-loader for the bundled program)
#   lean Monitor        : monitor-lite     (tokio + channel + flow)
#   Monitor + L7 + sinks: monitor
#   everything app-tier : monitor-quickstart
[features]
default = []

# ── Axis: async runtime ──────────────────────────────────────────────────────
tokio = ["dep:tokio", "dep:tokio-stream", "dep:futures-core"]
channel = ["dep:crossbeam-channel"]

# ── Axis: capture backend ────────────────────────────────────────────────────
# AF_PACKET is always compiled (the base). These add the other backends.
af-xdp = []
# Built-in XDP redirect-all program loader for AF_XDP. Pulls `aya` (HEAVY).
# Lets `XdpSocketBuilder::with_default_program()` create an XSKMAP, load the
# program, attach it, and register the socket — no external loader required.
xdp-loader = ["af-xdp", "dep:aya"]
pcap = ["dep:pcap-file"]

# ── Axis: parse depth (parse → flow → L7 parsers) ────────────────────────────
parse = ["dep:etherparse", "flowscope/extractors"]
# Flow & session tracking. `flow + tokio` enables `AsyncCapture::flow_stream`
# + the Monitor. Pulls `bytes` (async reassembler) + `ahash` (flow-key hashing).
# NOTE: `flow` implies `parse` — the tracker needs etherparse extractors.
# `flowscope/community-id` surfaces the Corelight Community ID v1 on flow
# records (issue #33 / flowscope #88) — the cross-tool flow id pivoted against
# Zeek / Suricata. Tiny (sha1 + base64); kept in `flow` so every flow export
# (JSON / IPFIX / `export::FlowRecord`) carries it.
flow = ["parse", "flowscope/tracker", "flowscope/reassembler", "flowscope/session", "flowscope/community-id", "dep:bytes", "dep:ahash"]
# L7 parser pass-through — pull flowscope's HTTP/DNS/TLS/ICMP modules.
http = ["flow", "flowscope/http"]
dns = ["flow", "flowscope/dns"]
tls = ["flow", "flowscope/tls", "flowscope/tls-fingerprints"]
icmp = ["flow", "flowscope/icmp"]
# L2 ARP visibility + spoof/binding-change detection. Pulls flowscope's `arp`
# module (parser + ArpMessage::is_likely_spoof) and reuses its NeighborTable.
# Parsed per-frame in the Monitor drain (no 5-tuple → not a flow protocol);
# see `MonitorBuilder::on_arp` / `on_arp_anomaly` and `src/monitor/arp.rs`.
arp = ["flow", "flowscope/arp"]
# L3 IPv6 Neighbor Discovery (NDP) visibility + spoof/binding-change detection
# — the ARP sibling. Pulls flowscope's `ndp` module; parsed per-frame (ICMPv6
# NS/NA) in the Monitor drain. See `MonitorBuilder::on_ndp` / `on_ndp_anomaly`.
ndp = ["flow", "flowscope/ndp"]
# L2 link-layer discovery (issue #28). LLDP (EtherType 0x88cc) and CDP (802.3
# LLC/SNAP) are parsed per-frame in the Monitor drain like ARP/NDP. See
# `MonitorBuilder::on_lldp` / `on_cdp`. CDP can't be kernel-prefiltered (no
# EtherType term) → arming it forces capture-all.
lldp = ["flow", "flowscope/lldp"]
cdp = ["flow", "flowscope/cdp"]
# Passive asset inventory (issue #28). A MAC-keyed `Inventory` fed by the L2/L3
# discovery hooks that are also enabled (arp/ndp/lldp/cdp). See
# `MonitorBuilder::asset_inventory` / `on_asset`. Combine with at least one
# source feature for the inventory to be fed.
asset = ["flow", "flowscope/asset"]
# Passive TCP/OS fingerprinting — p0f (issue #31). Per-SYN fingerprint extracted
# in the Monitor drain; see `MonitorBuilder::on_p0f` → `flowscope::TcpFingerprint`.
p0f = ["flow", "flowscope/tcp_fingerprint"]
# Lateral-movement / Active Directory L7 protocols (issue #29). Each pulls the
# matching flowscope 0.18 passive parser and surfaces a `Protocol` marker
# (`Smb`/`Kerberos`/`Ldap`/`Rdp`) usable via `.protocol::<P>()` + `.on::<P>()`.
smb = ["flow", "flowscope/smb"]
kerberos = ["flow", "flowscope/kerberos"]
ldap = ["flow", "flowscope/ldap"]
rdp = ["flow", "flowscope/rdp"]
# Umbrella for the lateral-movement protocol set.
ad-protocols = ["smb", "kerberos", "ldap", "rdp"]
# Asset-discovery L7 protocols (issue #28). Each pulls the matching flowscope
# 0.18 passive datagram parser and surfaces a `Protocol` marker
# (`Dhcp`/`Ssdp`/`Nbns`) usable via `.protocol::<P>()` + `.on::<P>()`.
dhcp = ["flow", "flowscope/dhcp"]
ssdp = ["flow", "flowscope/ssdp"]
netbios-ns = ["flow", "flowscope/netbios-ns"]
# mDNS (UDP/5353) — feeds the asset `Inventory` via per-frame DnsResponse
# extraction (no standalone `on::<P>` marker — it yields the same `DnsMessage`
# as `Dns`, which would collide in the type-keyed dispatcher). Pulls flowscope's
# `mdns` module (→ `dns`).
mdns = ["flow", "flowscope/mdns"]
# Umbrella for the asset-discovery protocol set.
asset-protocols = ["dhcp", "ssdp", "netbios-ns", "mdns"]
# Tier-2 protocols (issue #30). Each pulls the matching flowscope 0.18 passive
# parser and surfaces a `Protocol` marker usable via `.protocol::<P>()` +
# `.on::<P>()`. SSH (+ HASSH) was first; the UDP infrastructure set follows.
ssh = ["flow", "flowscope/ssh"]
ntp = ["flow", "flowscope/ntp"]
snmp = ["flow", "flowscope/snmp"]
tftp = ["flow", "flowscope/tftp"]
radius = ["flow", "flowscope/radius"]
# Umbrella for the UDP infrastructure-protocol set (NTP/SNMP/TFTP/RADIUS).
infra-protocols = ["ntp", "snmp", "tftp", "radius"]
# Mail / file-transfer (TCP) + NAT-traversal / VPN (UDP) Tier-2 protocols.
ftp = ["flow", "flowscope/ftp"]
smtp = ["flow", "flowscope/smtp"]
stun = ["flow", "flowscope/stun"]
wireguard = ["flow", "flowscope/wireguard"]
# OT/ICS protocols (industrial control). Modbus/TCP + DNP3.
modbus = ["flow", "flowscope/modbus"]
dnp3 = ["flow", "flowscope/dnp3"]
ot-protocols = ["modbus", "dnp3"]
# QUIC Initial-packet visibility (issue #14) — on-path SNI/ALPN/version from the
# passive-decryptable QUIC Initial, no decryption keys needed. `Quic` marker on
# UDP/443 → `flowscope::QuicInitial`.
quic = ["flow", "flowscope/quic"]
all-parsers = [
    "http", "dns", "tls", "icmp",
    "smb", "kerberos", "ldap", "rdp",
    "dhcp", "ssdp", "netbios-ns",
    "ssh", "quic",
]

# JA4S server fingerprint (`TlsFingerprint.ja4s`). Part of the JA4+ suite,
# licensed under the FoxIO License 1.1 (source-available, non-commercial;
# patent pending) — NOT MIT/Apache like the rest of netring. OFF BY DEFAULT
# (excluded from `monitor`/`all-parsers`). The default TLS fingerprint surface
# (JA3 + JA4 client) stays royalty-free. Commercial use requires a FoxIO OEM
# license. See `docs/FINGERPRINTS.md` and flowscope's LICENSE-FoxIO-1.1.
ja4plus = ["tls", "flowscope/ja4plus"]
# Pass-through for flowscope's `detect::file` (Sha256Sink / FileType).
file-hash = ["flowscope/file-hash"]

# ── Axis: sinks / exporters / serialization ──────────────────────────────────
# serde derives on `Anomaly<K>` / `AnomalyContext` / `Severity` + JSON sinks.
serde = ["dep:serde", "dep:serde_json", "flowscope/serde"]
metrics = ["dep:metrics"]
# Pass-through for flowscope's `emit` module (Zeek conn.log, CSV writers).
emit = ["flow", "flowscope/emit"]
# Suricata EVE JSON sink over `flowscope::emit::EveJsonWriter`.
eve-sink = ["emit", "dep:serde_json", "flowscope/emit-eve", "flowscope/community-id"]
# OCSF (Open Cybersecurity Schema Framework) Detection Finding sink (issue #50).
# Maps each anomaly to an OCSF 2004 NDJSON line; pulls only `serde_json`.
ocsf-sink = ["dep:serde_json"]
# Sigma rule evaluation over flow/session records (issue #46). Pulls the
# pure-Rust `sigma-rust` evaluator. The DNS / HTTP / TLS rule arms are active
# only when the matching parser feature is also enabled (like `ioc`).
sigma = ["flow", "dep:sigma-rust"]
# CICFlowMeter ML-feature export (issue #32). `on_ml_features` delivers
# flowscope's `CicFlowFeatures` (totals + IAT + active/idle) per flow at end.
ml-features = ["flow", "flowscope/ml-features"]
# nPrint per-flow header-bit matrix export (issue #72). `on_nprint` delivers
# flowscope's `NPrintMatrix` (one ternary row per packet) per flow at end.
# Per-packet retention is heavy (~43 KiB/flow) — opt-in, never in an umbrella.
nprint = ["flow", "parse", "flowscope/ml-features-nprint"]
# YARA-X payload scanning over reassembled flows (issue #45). `yara()` scans
# each flow's accumulated payload at flow end against compiled YARA rules.
# HEAVY: yara-x pulls the cranelift/wasmtime JIT (~150 transitive crates) even
# with default-features off. Opt-in only — never in an umbrella.
yara = ["flow", "parse", "dep:yara-x"]
# RFC 5424 syslog anomaly sink (hand-rolled, no deps).
syslog = []
# IPFIX / NetFlow v10 flow exporter (RFC 7011). The binary wire encoder
# is delegated to flowscope's `ipfix::wire` (issue #33) so the IANA IE
# registry + template lifecycle live in one place; netring owns the I/O
# rails. Needs the flow-export rails (`flow` + `tokio` gate `crate::export`).
ipfix = ["flow", "tokio", "flowscope/ipfix-export"]
# (OTLP/Kafka exporters live in the `netring-exporters` companion crate,
#  not as core features.)

# ── Umbrellas ────────────────────────────────────────────────────────────────
# Lean Monitor: the typed dispatch + run loop, no serde/metrics/eve/parsers.
# The minimum viable Monitor baseline for embedded/embedded-app builds.
monitor-lite = ["tokio", "channel", "flow"]
# Full Monitor + detector! experience for app users.
monitor = [
    "tokio", "channel", "flow", "parse", "metrics",
    "http", "dns", "tls", "icmp", "arp", "ndp", "lldp", "cdp", "asset", "p0f", "ad-protocols", "asset-protocols", "ssh", "quic",
    "emit", "serde",
]
# Maximal app-tier umbrella (every shipped sink + parser + flowscope bonus).
monitor-quickstart = [
    "tokio", "channel", "flow", "parse", "pcap", "metrics",
    "http", "dns", "tls", "icmp", "arp", "ndp", "lldp", "cdp", "asset", "p0f", "ad-protocols", "asset-protocols", "ssh", "quic",
    "emit", "eve-sink", "ocsf-sink", "file-hash", "serde",
]

# ── Misc / build-time ────────────────────────────────────────────────────────
nightly = []
integration-tests = []
# Drives the dhat allocation-regression bench (`benches/zero_alloc.rs`).
bench-zero-alloc = ["dep:dhat", "flow", "tokio", "parse"]
yara-x = ["dep:yara-x"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# ── Examples ────────────────────────────────────────────────────────────────
# Organized by topic under `examples/<category>/`. Example *names*
# (the `cargo run --example <name>` argument) are kept stable across
# the reorg; files moved to subdirectories carry explicit `path = ...`.

# basic/ — plain sync capture / TX / bridge
[[example]]
name = "capture"
path = "examples/basic/capture.rs"

[[example]]
name = "inject"
path = "examples/basic/inject.rs"

[[example]]
name = "tx_replay"
path = "examples/basic/tx_replay.rs"
required-features = ["tokio"]

[[example]]
name = "bridge"
path = "examples/basic/bridge.rs"

[[example]]
name = "batch_processing"
path = "examples/basic/batch_processing.rs"

[[example]]
name = "low_latency"
path = "examples/basic/low_latency.rs"

[[example]]
name = "stats_monitor"
path = "examples/basic/stats_monitor.rs"

[[example]]
name = "channel_consumer"
path = "examples/basic/channel_consumer.rs"
required-features = ["channel"]

[[example]]
name = "pcap_write"
path = "examples/basic/pcap_write.rs"
required-features = ["pcap"]

[[example]]
name = "dpi"
path = "examples/basic/dpi.rs"

# async_basics/ — async wrappers, no flow features
[[example]]
name = "async_capture"
path = "examples/async_basics/capture.rs"
required-features = ["tokio"]

[[example]]
name = "async_inject"
path = "examples/async_basics/inject.rs"
required-features = ["tokio"]

[[example]]
name = "async_bridge"
path = "examples/async_basics/bridge.rs"
required-features = ["tokio"]

[[example]]
name = "async_stream"
path = "examples/async_basics/stream.rs"
required-features = ["tokio"]

[[example]]
name = "async_streamext"
path = "examples/async_basics/streamext.rs"
required-features = ["tokio"]

[[example]]
name = "async_pipeline"
path = "examples/async_basics/pipeline.rs"
required-features = ["tokio"]

[[example]]
name = "async_signal"
path = "examples/async_basics/signal.rs"
required-features = ["tokio"]

[[example]]
name = "async_lo_dedup"
path = "examples/async_basics/lo_dedup.rs"
required-features = ["tokio"]

[[example]]
name = "async_stats_monitor"
path = "examples/async_basics/stats_monitor.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_metrics"
path = "examples/async_basics/metrics.rs"
required-features = ["tokio", "metrics"]

# filter/ — BPF / eBPF / live filter swap
[[example]]
name = "bpf_filter"
path = "examples/filter/bpf_filter.rs"

[[example]]
name = "ebpf_filter"
path = "examples/filter/ebpf_filter.rs"

[[example]]
name = "async_filter"
path = "examples/filter/async_filter.rs"
required-features = ["tokio", "flow", "parse"]

# scaling/ — fanout + multi-source
[[example]]
name = "fanout"
path = "examples/scaling/fanout.rs"

[[example]]
name = "async_fanout_workers"
path = "examples/scaling/async_fanout_workers.rs"
required-features = ["tokio", "flow", "parse"]

[[example]]
name = "async_multi_interface"
path = "examples/scaling/async_multi_interface.rs"
required-features = ["tokio", "flow", "parse"]

# xdp/ — AF_XDP
[[example]]
name = "xdp_send"
path = "examples/xdp/xdp_send.rs"
required-features = ["af-xdp"]

[[example]]
name = "async_xdp"
path = "examples/xdp/async_xdp.rs"
required-features = ["tokio", "af-xdp"]

[[example]]
name = "async_xdp_busy_poll"
path = "examples/xdp/async_xdp_busy_poll.rs"
required-features = ["tokio", "af-xdp"]

[[example]]
name = "async_xdp_self_loaded"
path = "examples/xdp/async_xdp_self_loaded.rs"
required-features = ["tokio", "af-xdp", "xdp-loader"]

[[example]]
name = "async_xdp_custom_program"
path = "examples/xdp/async_xdp_custom_program.rs"
required-features = ["tokio", "af-xdp", "xdp-loader"]

[[example]]
name = "xdp_multiqueue"
path = "examples/xdp/xdp_multiqueue.rs"
required-features = ["af-xdp", "xdp-loader"]

[[example]]
name = "xdp_sharded"
path = "examples/xdp/xdp_sharded.rs"
required-features = ["monitor", "af-xdp", "xdp-loader"]

# flow/ — flow tracking (no L7 parsers)
[[example]]
name = "async_flow_keys"
path = "examples/flow/keys.rs"
required-features = ["tokio", "parse"]

[[example]]
name = "async_flow_summary"
path = "examples/flow/summary.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_history"
path = "examples/flow/history.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_channel"
path = "examples/flow/channel.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_filter"
path = "examples/flow/filter.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_idle_per_key"
path = "examples/flow/idle_per_key.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_conversations"
path = "examples/flow/conversations.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_with_tap"
path = "examples/flow/with_tap.rs"
required-features = ["tokio", "flow", "parse", "pcap"]

[[example]]
name = "top_n_flows"
path = "examples/flow/top_n_flows.rs"
required-features = ["tokio", "flow", "parse"]

[[example]]
name = "ewma_rate"
path = "examples/flow/ewma_rate.rs"
required-features = ["tokio", "flow", "parse"]

[[example]]
name = "active_flows_snapshot"
path = "examples/flow/active_flows_snapshot.rs"
required-features = ["tokio", "flow", "parse"]

[[example]]
name = "zeek_export"
path = "examples/flow/zeek_export.rs"
required-features = ["tokio", "flow", "parse", "emit"]

# l7/ — session/datagram parsers (HTTP, DNS, custom)
[[example]]
name = "async_on_tick"
path = "examples/l7/on_tick.rs"
required-features = ["tokio", "flow", "parse"]

[[example]]
name = "multi_protocol_monitor"
path = "examples/l7/multi_protocol_monitor.rs"
required-features = ["tokio", "flow", "parse"]

[[example]]
name = "http_session"
path = "examples/l7/http_session.rs"
required-features = ["tokio", "http"]

[[example]]
name = "dns_lookups"
path = "examples/l7/dns_lookups.rs"
required-features = ["tokio", "dns"]

[[example]]
name = "dns_query_burst"
path = "examples/anomaly/dns_query_burst.rs"
required-features = ["tokio", "dns"]

[[example]]
name = "dns_resolved_no_connection"
path = "examples/anomaly/dns_resolved_no_connection.rs"
required-features = ["tokio", "dns"]

[[example]]
name = "monitor_basic"
path = "examples/monitor/basic.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "monitor_auto_backend"
path = "examples/monitor/auto_backend.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "monitor_detector_macro"
path = "examples/monitor/detector_macro.rs"
required-features = ["tokio", "flow", "http", "dns"]

[[example]]
name = "monitor_layered_sinks"
path = "examples/monitor/layered_sinks.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "monitor_async_handler"
path = "examples/monitor/async_handler.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "monitor_stream_consumer"
path = "examples/monitor/stream_consumer.rs"
required-features = ["tokio", "flow", "http"]

[[example]]
name = "monitor_ech_adoption"
path = "examples/monitor/ech_adoption.rs"
required-features = ["tokio", "flow", "tls"]

[[example]]
name = "monitor_port_scan"
path = "examples/monitor/port_scan.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "monitor_pcap_replay"
path = "examples/monitor/pcap_replay.rs"
required-features = ["tokio", "flow", "pcap"]

[[example]]
name = "monitor_sharded_runner"
path = "examples/monitor/sharded_runner.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "monitor_eve_to_filebeat"
path = "examples/monitor/eve_to_filebeat.rs"
required-features = ["tokio", "flow", "eve-sink"]

[[example]]
name = "monitor_arp_watch"
path = "examples/monitor/arp_watch.rs"
required-features = ["tokio", "arp", "emit"]

[[example]]
name = "monitor_ndp_watch"
path = "examples/monitor/ndp_watch.rs"
required-features = ["tokio", "ndp", "emit"]

[[example]]
name = "monitor_lateral_movement"
path = "examples/monitor/lateral_movement.rs"
required-features = ["tokio", "ad-protocols", "emit"]

[[example]]
name = "monitor_asset_discovery"
path = "examples/monitor/asset_discovery.rs"
required-features = ["tokio", "asset-protocols", "emit"]

[[example]]
name = "monitor_ssh_hassh"
path = "examples/monitor/ssh_hassh.rs"
required-features = ["tokio", "ssh", "emit"]

[[example]]
name = "monitor_quic_sni"
path = "examples/monitor/quic_sni.rs"
required-features = ["tokio", "quic", "emit"]

[[example]]
name = "monitor_p0f"
path = "examples/monitor/p0f.rs"
required-features = ["tokio", "p0f", "emit"]

[[example]]
name = "monitor_flow_risk"
path = "examples/monitor/flow_risk.rs"
required-features = ["tokio", "tls", "http", "emit"]

[[example]]
name = "monitor_ioc"
path = "examples/monitor/ioc_match.rs"
required-features = ["tokio", "dns", "tls", "http"]

[[example]]
name = "monitor_ioc_reload"
path = "examples/monitor/ioc_hot_reload.rs"
required-features = ["tokio", "dns", "tls", "http"]

[[example]]
name = "monitor_sigma_rules"
path = "examples/monitor/sigma_rules.rs"
required-features = ["sigma", "dns", "tls", "http", "tokio", "emit"]

[[example]]
name = "monitor_sigma_reload"
path = "examples/monitor/sigma_hot_reload.rs"
required-features = ["sigma", "dns", "tls", "http", "tokio"]

[[example]]
name = "monitor_ml_features"
path = "examples/monitor/ml_features_export.rs"
required-features = ["ml-features", "tokio"]

[[example]]
name = "monitor_nprint"
path = "examples/monitor/nprint_export.rs"
required-features = ["nprint", "tokio"]

[[example]]
name = "monitor_infra_protocols"
path = "examples/monitor/infra_protocols.rs"
required-features = ["infra-protocols", "tokio", "emit"]

[[example]]
name = "monitor_app_protocols"
path = "examples/monitor/app_protocols.rs"
required-features = ["ftp", "smtp", "modbus", "dnp3", "stun", "wireguard", "tokio", "emit"]

[[example]]
name = "monitor_ocsf"
path = "examples/monitor/ocsf_findings.rs"
required-features = ["tokio", "ocsf-sink", "dns", "tls"]

[[example]]
name = "monitor_l2_discovery"
path = "examples/monitor/l2_discovery.rs"
required-features = ["tokio", "lldp", "cdp", "emit"]

[[example]]
name = "monitor_asset_inventory"
path = "examples/monitor/asset_inventory.rs"
required-features = ["tokio", "asset", "arp", "ndp", "lldp", "cdp", "dhcp", "ssdp", "netbios-ns", "mdns"]

[[example]]
name = "monitor_metrics_export"
path = "examples/monitor/metrics_export.rs"
required-features = ["tokio", "flow", "metrics"]

[[example]]
name = "monitor_net_diagnostic"
path = "examples/monitor/net_diagnostic.rs"
required-features = ["tokio", "flow", "icmp"]

[[example]]
name = "monitor_multi_thread_default"
path = "examples/monitor/multi_thread_default.rs"
required-features = ["tokio", "flow", "channel"]

[[example]]
name = "monitor_report_stream"
path = "examples/monitor/report_stream.rs"
required-features = ["tokio", "flow", "serde"]

[[example]]
name = "monitor_label_table"
path = "examples/monitor/label_table.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "monitor_health_endpoint"
path = "examples/monitor/health_endpoint.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "monitor_subscriptions"
path = "examples/monitor/subscriptions.rs"
required-features = ["monitor"]

[[example]]
name = "monitor_tracing_json"
path = "examples/monitor/tracing_json.rs"
required-features = ["monitor"]

[[example]]
name = "monitor_flow_export"
path = "examples/monitor/flow_export.rs"
required-features = ["monitor"]

[[example]]
name = "monitor_resilience"
path = "examples/monitor/resilience.rs"
required-features = ["monitor"]

[[example]]
name = "monitor_eve_tls"
path = "examples/monitor/eve_tls.rs"
required-features = ["monitor", "eve-sink"]

[[example]]
name = "monitor_ja4_fingerprint"
path = "examples/monitor/ja4_fingerprint.rs"
# Demonstrates JA4S/JA4X (server + cert) and JA4H (HTTP) → requires the opt-in
# `ja4plus` feature (FoxIO License 1.1) + `http`. JA3 + JA4 client alone need
# only `tls`.
required-features = ["tokio", "flow", "http", "ja4plus"]

[[example]]
name = "monitor_beacon_detector"
path = "examples/monitor/beacon_detector.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "monitor_rita_beacon"
path = "examples/monitor/rita_beacon_detector.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "monitor_yara"
path = "examples/monitor/yara_scan.rs"
required-features = ["yara", "tokio"]

[[example]]
name = "monitor_overload"
path = "examples/monitor/overload_signal.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "monitor_dga_query"
path = "examples/monitor/dga_query.rs"
required-features = ["tokio", "flow", "dns"]

[[example]]
name = "monitor_file_hash_dfir"
path = "examples/monitor/file_hash_dfir.rs"
required-features = ["tokio", "flow", "http", "file-hash"]

# util/ — helper companions for the demos
[[example]]
name = "synthetic_traffic"
path = "examples/util/synthetic_traffic.rs"
required-features = ["tokio"]

# pcap/ — offline pcap
[[example]]
name = "async_pcap_replay"
path = "examples/pcap/replay.rs"
required-features = ["tokio", "flow", "parse", "pcap"]

[[example]]
name = "async_pcap_sessions"
path = "examples/pcap/sessions.rs"
required-features = ["tokio", "flow", "parse", "pcap"]

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "zero_alloc"
harness = false
required-features = ["bench-zero-alloc"]

# 0.25 C3: cap-free userspace dispatch-throughput pps proxy (docs/PERFORMANCE.md).
[[bench]]
name = "dispatch_throughput"
harness = false
required-features = ["flow"]

# Issue #17 M0 spike: measure runtime TypeId dispatch overhead vs a monomorphic
# direct call (the `subscribe!` macro target), against the track_into baseline.
[[bench]]
name = "dispatch_specialization"
harness = false
required-features = ["bench-zero-alloc"]
